--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -12,8 +12,9 @@
 
       <h2 class="text-center">Add a Dose</h2>
 
-      <%= cl_image_tag("zpqxnotaptlvdn2bjj72",
-      width: 400, height: 300, crop: :fill)%>
+      <% if @cocktail.photo? %>
+        <%= cl_image_tag @cocktail.photo.path, width: 200, height: 300, crop: :fill %>
+      <% end %>
 
 
       <% if @dose.errors.any? %>
