--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,13 +1,22 @@
-<h1 class="text-center">Your cocktail list</h1>
-
-<div class="text-center padded">
-  <%= link_to "Create a cocktail", new_cocktail_path, class: 'btn btn-primary' %>
+<div class="header">
+  <%= render 'shared/navbar' %>
+  <div class="banner index">
+    <div class="banner_content">
+      <h1 class="text-center">Your cocktail list</h1>
+      <div class="text-center padded">
+        <%= link_to "Create a cocktail", new_cocktail_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="container">
   <div class="row">
     <% @cocktails.each do |cocktail| %>
       <p><%= link_to cocktail.name, cocktail_path(cocktail) %></p>
+      <% if cocktail.photo? %>
+        <%= cl_image_tag cocktail.photo.path, width: 200, height: 300, crop: :fill %>
+      <% end %>
     <% end %>
   </div>
 </div>
