--- a/app/assets/stylesheets/components/_banners.scss
+++ b/app/assets/stylesheets/components/_banners.scss
@@ -11,7 +11,7 @@
 }
 
 .header{
-  background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.1) 80%), url(http://419a5ecf000c70751b96-2d268c5dae618615daa5314a1f0f4b99.r77.cf1.rackcdn.com/restaurants-irs/235125/EclipseCocktails1.png);
+  background-image: linear-gradient(-225deg, rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.1) 80%), url(https://media.timeout.com/images/101692749/image.jpg);
   background-position: center;
   background-size: cover;
 }
