--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background-color: rgba(0,0,0,0.6);
   transition: all 0.3s ease;
-  height: 70px;
+  height: 90px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -15,7 +15,7 @@
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 80px;
+  height: 70px;
 }
 
 /* User Avatar */
@@ -40,10 +40,14 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: white;
-  font-size: 14px;
+  color:  white;
+  font-size: 18px;
+  padding: 0px;
+  margin: 0px 20px;
 }
+
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: white;
   text-decoration: none;
+  border-bottom: 3px solid white;
 }
